--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -129,84 +129,84 @@ jobs:
         with:
           config: auto
 
-  # dependency-check:
-  #   runs-on: ubuntu-latest
-  #   needs: semgrep
-  #   steps:
-  #     - uses: actions/checkout@v3
+  dependency-check-trivy-scan:
+    runs-on: ubuntu-latest
+    needs: semgrep
+    steps:
+      - uses: actions/checkout@v3
   
-  #     - name: Install Trivy CLI (v0.38.3)
-  #       run: |
-  #         sudo apt update
-  #         sudo apt install -y wget apt-transport-https
-  #         wget https://github.com/aquasecurity/trivy/releases/download/v0.38.3/trivy_0.38.3_Linux-64bit.deb
-  #         sudo dpkg -i trivy_0.38.3_Linux-64bit.deb
-  #         trivy --version
+      - name: Install Trivy CLI (v0.38.3)
+        run: |
+          sudo apt update
+          sudo apt install -y wget apt-transport-https
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.38.3/trivy_0.38.3_Linux-64bit.deb
+          sudo dpkg -i trivy_0.38.3_Linux-64bit.deb
+          trivy --version
 
-  #     - name: Run Trivy Scan
-  #       run: |
-  #         trivy fs . --format table --severity HIGH,CRITICAL
+      - name: Run Trivy Scan
+        run: |
+          trivy fs . --format table --severity HIGH,CRITICAL
 
 
-  # malware-scan:
-  #   runs-on: ubuntu-latest
-  #   needs: dependency-check
-  #   steps:
-  #     - uses: actions/checkout@v3
+  malware-scan:
+    runs-on: ubuntu-latest
+    needs:  dependency-check-trivy-scan
+    steps:
+      - uses: actions/checkout@v3
   
-  #     - name: Install ClamAV and run scan
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y clamav
-  #         sudo systemctl stop clamav-freshclam 
-  #         sudo freshclam
-  #         sudo freshclam 
-  #         clamscan -r . | tee malware-scan-results.txt  
-  #         # clamscan -r . --infected --bell --quiet | tee malware-scan-results.txt
+      - name: Install ClamAV and run scan
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clamav
+          sudo systemctl stop clamav-freshclam 
+          sudo freshclam
+          sudo freshclam 
+          clamscan -r . | tee malware-scan-results.txt  
+          # clamscan -r . --infected --bell --quiet | tee malware-scan-results.txt
   
-  #     - name: Upload scan results
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: malware-scan-results
-  #         path: malware-scan-results.txt
+      - name: Upload scan results
+        uses: actions/upload-artifact@v4
+        with:
+          name: malware-scan-results
+          path: malware-scan-results.txt
 
 
 
-  # image-build:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     DOCKER_REPO: shaikbyte/cicd-java
-  #     DOCKER_TAG: latest
-  #   needs: malware-scan
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Download WAR Artifact
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name:  java-app-war
-  #         path: target 
-  #     - name: Build Docker image
-  #       run: |
-  #         docker build -t shaikbyte/cicd-java:latest .
-  #         docker images
+  image-build:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_REPO: shaikbyte/cicd-java
+      DOCKER_TAG: latest
+    needs: malware-scan
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download WAR Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name:  java-app-war
+          path: target 
+      - name: Build Docker image
+        run: |
+          docker build -t shaikbyte/cicd-java:latest .
+          docker images
 
-  #     - name: Install Trivy
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install wget apt-transport-https gnupg lsb-release -y
-  #         wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-  #         echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-  #         sudo apt-get update
-  #         sudo apt-get install trivy -y
-  #         docker images
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install wget apt-transport-https gnupg lsb-release -y
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install trivy -y
+          docker images
 
-  #     - name: Trivy Docker Scan
-  #       run: trivy image $DOCKER_REPO:$DOCKER_TAG
+      - name: Trivy Docker Scan
+        run: trivy image $DOCKER_REPO:$DOCKER_TAG
 
-  #     - name: Docker Login
-  #       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-  #     - name: Docker Push
-  #       run: docker push $DOCKER_REPO:latest
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Docker Push
+        run: docker push $DOCKER_REPO:latest
 
   # deploy:
   #   runs-on: ubuntu-latest
