--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,6 +56,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-       - name: Build with Maven
-         run: mvn compile
+       - name: unit testing
+         run: mvn test
     
