--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,4 +58,30 @@ jobs:
           cache: maven
        - name: unit testing
          run: mvn test
+
+  build_and_scan:
+
+      runs-on: self-hosted
+      needs: test
+
+      steps:
+       - uses: actions/checkout@v4
+       - name: Set up JDK 17
+         uses: actions/setup-java@v4
+         with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+       - name: Build project
+         run: mvn packages
+
+       - uses: actions/checkout@v4
+         with:
+        # Disabling shallow clones is recommended for improving the relevancy of reporting
+          fetch-depth: 0
+       - name: SonarQube Scan
+         uses: SonarSource/sonarqube-scan-action@<action version or sha1> # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+         env:
+           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
     
